--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -1,1 +1,42 @@
 extends base/base
+
+block content
+	header
+		.container
+			.row
+				.col-md-7.branding
+					.branding__logo Logo
+					.branding__slogan Slogan
+				.col-md-3 Телефон
+				.col-md-2 Оформить заказ
+	.navigation
+		.container
+			.row
+				.col-md-9
+					ul
+						li.navigation__item.active
+							a(href="")
+								span Главная
+						li.navigation__item
+							a(href="")
+								span О компании
+						li.navigation__item
+							a(href="")
+								span Каталог
+						li.navigation__item
+							a(href="")
+								span Запчасти
+						li.navigation__item
+							a(href="")
+								span Аренда
+						li.navigation__item
+							a(href="")
+								span Новости
+						li.navigation__item
+							a(href="")
+								span Контакты
+				.col-md-3
+					form.search
+						input(type="text" placeholder="Поиск по сайту").search__input
+						a(href="").search__button
+							i.fa.fa-search
