--- a/src/styles/bootstrap/variables.styl
+++ b/src/styles/bootstrap/variables.styl
@@ -12,13 +12,14 @@ $gray-darker ?=         lighten($gray-base, 13.5%) // #222
 $gray-dark ?=           lighten($gray-base, 20%)   // #333
 $gray ?=                lighten($gray-base, 33.5%) // #555
 $gray-light ?=          lighten($gray-base, 46.7%) // #777
-$gray-lighter ?=        lighten($gray-base, 93.5%) // #eee
+$gray-lighter ?=        #e5e5e5
 
-$brand-primary ?=       darken(#428bca, 6.5%) // #337ab7
+$brand-primary ?=       #ff3600
 $brand-success ?=       #5cb85c
 $brand-info ?=          #5bc0de
 $brand-warning ?=       #f0ad4e
 $brand-danger ?=        #d9534f
+$black = #000
 
 
 //== Scaffolding
