Index page update

--- a/src/styles/custom/main.styl
+++ b/src/styles/custom/main.styl
@@ -1,5 +1,12 @@
 @import "../bootstrap/variables"
 
 @import "elements/common"
+@import "elements/typo"
+@import "elements/branding"
+@import "elements/phone"
+@import "elements/checkout-link"
 @import "elements/navigation"
 @import "elements/search"
+
+@import "elements/production"
+@import "elements/partners"
