--- a/src/styles/bootstrap/variables.styl
+++ b/src/styles/bootstrap/variables.styl
@@ -11,16 +11,16 @@ $gray-base ?=           #000
 $gray-darker ?=         lighten($gray-base, 13.5%) // #222
 $gray-dark ?=           lighten($gray-base, 20%)   // #333
 $gray ?=                lighten($gray-base, 33.5%) // #555
-$gray-light ?=          lighten($gray-base, 46.7%) // #777
+$gray-light ?=          #aaa
 $gray-lighter ?=        #e5e5e5
 
-$brand-primary ?=       #ff3600
+$brand-primary ?=       #ff3c00
 $brand-success ?=       #5cb85c
 $brand-info ?=          #5bc0de
 $brand-warning ?=       #f0ad4e
 $brand-danger ?=        #d9534f
 $black = #000
-
+$white = #fff
 
 //== Scaffolding
 //
@@ -43,7 +43,7 @@ $link-hover-decoration ?= underline
 //
 //## Font, line-height, and color for body text, headings, and more.
 
-$font-family-sans-serif ?= "Helvetica Neue", Helvetica, Arial, sans-serif
+$font-family-sans-serif ?= "Open Sans", sans-serif
 $font-family-serif ?=      Georgia, "Times New Roman", Times, serif
 //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
 $font-family-monospace ?=  Menlo, Monaco, Consolas, "Courier New", monospace
