--- a/src/templates/elements/head.jade
+++ b/src/templates/elements/head.jade
@@ -3,8 +3,9 @@ head
 	meta(name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1, minimal-ui')
 
 	title Project title
-	
+
 	link(href='css/bootstrap.css?' + timestamp rel='stylesheet')
 	link(href='css/main.css?' + timestamp rel='stylesheet')
+	link(href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css')
 	link(href='http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css' rel='stylesheet' type='text/css')
 
