--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -1,42 +1,52 @@
 extends base/base
 
 block content
-	header
-		.container
-			.row
-				.col-md-7.branding
-					.branding__logo Logo
-					.branding__slogan Slogan
-				.col-md-3 Телефон
-				.col-md-2 Оформить заказ
-	.navigation
-		.container
-			.row
-				.col-md-9
-					ul
-						li.navigation__item.active
-							a(href="")
-								span Главная
-						li.navigation__item
-							a(href="")
-								span О компании
-						li.navigation__item
-							a(href="")
-								span Каталог
-						li.navigation__item
-							a(href="")
-								span Запчасти
-						li.navigation__item
-							a(href="")
-								span Аренда
-						li.navigation__item
-							a(href="")
-								span Новости
-						li.navigation__item
-							a(href="")
-								span Контакты
-				.col-md-3
-					form.search
-						input(type="text" placeholder="Поиск по сайту").search__input
-						a(href="").search__button
-							i.fa.fa-search
+	.production.container
+		.row
+			mixin production()
+				.production__info
+					a(href="")
+						img(src="images/production__item.jpg")
+						.text
+							+lipsum(Math.floor(Math.random() * 3 + 1), "words")
+			.col-xs-12
+				h2.title.title__h2 Наша продукция
+				a(href="").production__all-goods Все товары
+			.col-md-3
+				.production__catalog
+					a(href="")
+						+lipsum(2, "words")
+					br
+					a(href="")
+						+lipsum(2, "words")
+					a(href="")
+						+lipsum(2, "words")
+					a(href="")
+						+lipsum(2, "words")
+					a(href="")
+						+lipsum(2, "words")
+					.corners.corners--top
+					.corners.corners--bottom
+
+			.col-md-3
+				+production()
+			.col-md-3
+				+production()
+			.col-md-3
+				+production()
+
+	.partners.container
+		.row
+			.col-xs-12.text-center
+				h2.title.title__h2.title__h2--center Наши партнеры
+		.row.partners__wrapper
+			mixin partners()
+				.col-xs-6.col-sm-4.col-md-2
+					.partners__item
+						img(src="images/partner__logo.png")
+			-for(var i = 0; i < 12; i++){
+				+partners()
+			-}
+			.partners__info
+				.text Запасные части для различного оборудования всех марок и моделей
+				a(href).link Заказать запчасть
