--- a/src/styles/custom/elements/checkout-link.styl
+++ b/src/styles/custom/elements/checkout-link.styl
@@ -7,6 +7,9 @@
 	border 2px solid $brand-primary
 	border-radius 4px
 	position relative
+	@media screen and (min-width: $screen-md) and (max-width: $screen-md-max)
+		width 165px
+		float right
 	&:hover
 		text-decoration none
 	&:before
