--- a/src/styles/custom/elements/partners.styl
+++ b/src/styles/custom/elements/partners.styl
@@ -20,3 +20,20 @@
 		left 50%
 		top 50%
 		transform translate(-50%,-50%)
+		padding 27px 20px
+		box-shadow 0 0 7px 5px $gray-lighter
+		.text
+			margin-right 215px
+			font-size 17px
+			cursor default
+		a
+			display block
+			position absolute
+			top 27px
+			right 20px
+			background $brand-primary
+			color $white
+			padding 12px 15px
+			font-size 17px
+			&:hover
+				text-decoration none
