--- a/src/styles/custom/main.styl
+++ b/src/styles/custom/main.styl
@@ -7,6 +7,10 @@
 @import "elements/checkout-link"
 @import "elements/navigation"
 @import "elements/search"
+@import "elements/footer"
 
 @import "elements/production"
 @import "elements/partners"
+@import "elements/clients"
+@import "elements/block-about"
+@import "elements/block-news"
