--- a/src/styles/bootstrap/variables.styl
+++ b/src/styles/bootstrap/variables.styl
@@ -10,7 +10,7 @@
 $gray-base ?=           #000
 $gray-darker ?=         lighten($gray-base, 13.5%) // #222
 $gray-dark ?=           lighten($gray-base, 20%)   // #333
-$gray ?=                lighten($gray-base, 33.5%) // #555
+$gray ?=                #909090
 $gray-light ?=          #aaa
 $gray-lighter ?=        #e5e5e5
 
