--- a/src/styles/custom/elements/navigation.styl
+++ b/src/styles/custom/elements/navigation.styl
@@ -9,9 +9,12 @@
 		float left
 		a
 			display block
-			padding 0 25px
 			color $black
 			font-weight 600
+			@media screen and (min-width: $screen-md)
+				padding 0 15px
+			@media screen and (min-width: $screen-lg)
+				padding 0 25px
 			span
 				display inline-block
 				padding 13px 0
@@ -21,10 +24,17 @@
 				outline none
 		&:first-child
 			a
-				padding 0 25px 0 0
+				@media screen and (min-width: $screen-md)
+					padding 0 15px 0 0
+				@media screen and (min-width: $screen-lg)
+					padding 0 25px 0 0
 		&:last-child
 			a
-				padding 0 0 0 25px
+				@media screen and (min-width: $screen-md)
+					padding 0 0 0 15px
+				@media screen and (min-width: $screen-lg)
+					padding 0 0 0 25px
+
 		&.active
 		&:hover
 			a span
