--- a/src/styles/custom/elements/production.styl
+++ b/src/styles/custom/elements/production.styl
@@ -3,7 +3,7 @@
 		display block
 		position absolute
 		right 0
-		top 20px
+		top 45px
 		font-size 20px
 		text-decoration none
 		border-bottom 1px dashed $brand-primary
@@ -18,6 +18,7 @@
 		line-height 2em
 		font-weight 600
 		position relative
+		margin-bottom 30px
 		a
 			display block
 			color inherit
@@ -27,6 +28,7 @@
 		height 240px
 		border 1px solid $gray-lighter
 		position relative
+		margin-bottom 30px
 		img
 			position absolute
 			left 50%
