--- a/src/styles/custom/elements/search.styl
+++ b/src/styles/custom/elements/search.styl
@@ -2,6 +2,8 @@
 	border-left 1px solid $gray-lighter
 	height 48px
 	position relative
+	@media screen and (max-width: $screen-sm-max)
+		margin-left 35px
 
 	&__input
 		height 100%
