--- a/src/styles/custom/elements/navigation.styl
+++ b/src/styles/custom/elements/navigation.styl
@@ -2,40 +2,89 @@
 	border-color $gray-lighter
 	border-style solid
 	border-width 1px 0
-	ul
-		height 48px
-	&__item
-		display block
-		float left
-		a
-			display block
-			color $black
-			font-weight 600
-			@media screen and (min-width: $screen-md)
-				padding 0 15px
-			@media screen and (min-width: $screen-lg)
-				padding 0 25px
-			span
-				display inline-block
-				padding 13px 0
-				border-bottom 2px solid transparent
-				transition border-color 350ms
-			&:focus
-				outline none
-		&:first-child
-			a
-				@media screen and (min-width: $screen-md)
-					padding 0 15px 0 0
-				@media screen and (min-width: $screen-lg)
-					padding 0 25px 0 0
-		&:last-child
-			a
-				@media screen and (min-width: $screen-md)
-					padding 0 0 0 15px
-				@media screen and (min-width: $screen-lg)
-					padding 0 0 0 25px
+	@media screen and (max-width: $screen-sm-max)
+		border none
+	&__hamburger
 
-		&.active
-		&:hover
-			a span
-				border-bottom-color $brand-primary
+		cursor pointer
+		display table
+		margin-left auto
+		margin-right auto
+		border none
+		background transparent
+		position absolute
+		left 0
+		top 0
+		padding 14px 13px
+		width 50px
+		height 50px
+		z-index 10
+		span
+			display block
+			width 25px
+			height 2px
+			background $black
+			border-radius 1px
+			&:not(:last-child)
+				margin-bottom 7px
+		&.expanded
+			background $brand-primary
+			span
+				background $white
+		@media screen and (min-width: $screen-md)
+			display none
+
+	@media screen and (max-width: $screen-sm-max)
+		ul
+			//display none
+			position absolute
+			top 50px
+			width 254px
+			left 0
+			z-index 100
+			background #21252a
+			padding 20px
+		&__item
+			display block
+			padding 10px
+			font-weight bold
+			a
+				color $white
+	@media screen and (min-width: $screen-md)
+		ul
+			height 48px
+		&__item
+			display block
+			float left
+			a
+				display block
+				color $black
+				font-weight 600
+				@media screen and (min-width: $screen-md)
+					padding 0 15px
+				@media screen and (min-width: $screen-lg)
+					padding 0 25px
+				span
+					display inline-block
+					padding 13px 0
+					border-bottom 2px solid transparent
+					transition border-color 350ms
+				&:focus
+					outline none
+			&:first-child
+				a
+					@media screen and (min-width: $screen-md)
+						padding 0 15px 0 0
+					@media screen and (min-width: $screen-lg)
+						padding 0 25px 0 0
+			&:last-child
+				a
+					@media screen and (min-width: $screen-md)
+						padding 0 0 0 15px
+					@media screen and (min-width: $screen-lg)
+						padding 0 0 0 25px
+
+			&.active
+			&:hover
+				a span
+					border-bottom-color $brand-primary
