--- a/src/styles/custom/elements/phone.styl
+++ b/src/styles/custom/elements/phone.styl
@@ -1,19 +1,25 @@
 .phone
 	margin-top 28px
 	position relative
-	padding-left 45px
-	color $black
-	font-size 16px
-	&:before
-		content "\f095"
-		font-family FontAwesome
-		display block
-		position absolute
-		left 0
-		top -3px
-		width 30px
-		height 30px
-		border-radius 4px
-		background $brand-primary
-		color $white
-		padding 4px 8px
+	font-size 14px
+	color $white
+	@media screen and (max-width: $screen-sm-max)
+		text-align left
+	@media screen and (min-width: $screen-xs)
+		font-size 16px
+	@media screen and (min-width: $screen-md)
+		color $black
+		padding-left 45px
+		&:before
+			content "\f095"
+			font-family FontAwesome
+			display block
+			position absolute
+			left 0
+			top -3px
+			width 30px
+			height 30px
+			border-radius 4px
+			background $brand-primary
+			color $white
+			padding 4px 8px
