--- a/src/styles/custom/main.styl
+++ b/src/styles/custom/main.styl
@@ -9,6 +9,7 @@
 @import "elements/search"
 @import "elements/footer"
 
+@import "elements/slider"
 @import "elements/production"
 @import "elements/partners"
 @import "elements/clients"
