--- a/src/styles/custom/elements/typo.styl
+++ b/src/styles/custom/elements/typo.styl
@@ -1,19 +1,26 @@
 .title
 	&__h2
 		position relative
+		font-size 17px
 		margin-top 45px
-		margin-bottom 55px
-		padding-left 20px
-		&:before
-			display block
-			position absolute
-			content ""
-			width 9px
-			height 9px
-			border-radius 50%
-			background $brand-primary
-			top 14px
-			left 0
+		margin-bottom 25px
+		font-weight bold
+		@media screen and (min-width: $screen-sm)
+			font-size 24px
+		@media screen and (min-width: $screen-md)
+			font-size 30px
+			padding-left 20px
+			margin-bottom 55px
+			&:before
+				display block
+				position absolute
+				content ""
+				width 9px
+				height 9px
+				border-radius 50%
+				background $brand-primary
+				top 14px
+				left 0
 		&--center
 			display inline-block
 			text-align center
