--- a/src/styles/custom/elements/block-news.styl
+++ b/src/styles/custom/elements/block-news.styl
@@ -4,18 +4,23 @@
 		displa block
 		position absolute
 		top 45px
-		right 0
-		font-size 20px
+		right 15px
+		font-size 16px
 		text-decoration none
 		border-bottom 1px dashed $brand-primary
 		&:hover
 			text-decoration none
+		@media screen and (min-width: $screen-sm)
+			font-size 18px
+		@media screen and (min-width: $screen-md)
+			font-size 20px
 	&__item
 		width 100%
 		img
 			float left
 			margin-right 30px
 			margin-bottom 40px
+			border-radius 4px
 		.data
 			color $brand-primary
 		.fa
