--- a/src/styles/custom/elements/clients.styl
+++ b/src/styles/custom/elements/clients.styl
@@ -5,7 +5,12 @@
 		filter grayscale(1)
 		opacity 0.25
 		transition 350ms
+		text-align center
 		&:hover
 		&:focus
 			filter grayscale(0)
 			opacity 1
+		img
+			display inline-block
+			max-width 100%
+			height auto
