--- a/src/styles/custom/elements/footer.styl
+++ b/src/styles/custom/elements/footer.styl
@@ -1,9 +1,13 @@
 .footer-info
 	background #1e2227
 	color $white
-	padding 50px 0
 	font-size 17px
+	padding 10px 0
 	line-height 24px
+	@media screen and (max-width: $screen-sm-max)
+		text-align center
+	@media screen and (min-width: $screen-md)
+		padding 50px 0
 
 	&__mail
 		.description
@@ -13,6 +17,13 @@
 			font-weight bold
 		.mail a
 			color $white
+		@media screen and (max-width: $screen-sm-max)
+			.description
+				float none
+				display inline
+				margin-right 0
+			.mail
+				display inline
 
 	&__branding
 		text-align center
@@ -28,6 +39,20 @@
 			font-weight bold
 		.phones
 			text-align right
+		@media screen and (max-width: $screen-sm-max)
+			display flex
+			justify-content center
+			margin-top 10px
+			.description
+				float none
+				margin 0
+				flex 0 0 auto
+				text-align right
+				margin-right 0.2em
+			.phones
+				flex 0 0 auto
+				text-align left
+				margin-left 0.2em
 
 
 .footer-nav
@@ -35,13 +60,30 @@
 	color $white
 	padding 20px 0
 
+	ul
+		@media screen and (max-width: $screen-sm-max)
+			text-align center
+
 	&__item
-		display block
-		float left
-		margin-right 30px
-		font-size 14px
+		display inline-block
+		text-align center
+		margin 0 10px
 		a
 			color $white
 			&:hover
 			&:focus
+				text-decoration none
 				color $brand-primary
+		@media screen and (min-width: $screen-md)
+			display block
+			float left
+			margin 0 30px 0 0
+			font-size 14px
+	&__dev
+		text-align center
+		font-style italic
+		margin-top 10px
+		@media screen and (min-width: $screen-md)
+			text-align right
+			padding-right 90px
+			margin-top 0
