--- a/src/styles/custom/elements/partners.styl
+++ b/src/styles/custom/elements/partners.styl
@@ -1,6 +1,12 @@
 .partners
 	&__wrapper
 		position relative
+		@media screen and (max-width: $screen-xs-max)
+			> *:nth-child(n+5):not(:last-child)
+				display none
+		@media screen and (max-width: $screen-sm-max)
+			> *:nth-child(n+7):not(:last-child)
+				display none
 
 	&__item
 		width 100%
@@ -14,6 +20,7 @@
 			top 50%
 			transform translate(-50%, -50%)
 
+
 	&__info
 		background $white
 		position absolute
@@ -22,18 +29,33 @@
 		transform translate(-50%,-50%)
 		padding 27px 20px
 		box-shadow 0 0 7px 5px $gray-lighter
+		display flex
+		flex-wrap wrap
+		width 60%
+		justify-content center
+		@media screen and (min-width: $screen-sm)
+			flex-wrap nowrap
+			width 600px
+			justify-content space-between
 		.text
-			margin-right 215px
+			flex 1 1 340px
 			font-size 17px
 			cursor default
+			text-align center
+			margin-bottom 10px
+			@media screen and (min-width: $screen-sm)
+				text-align left
+				flex 0 0 340px
+				margin-bottom 0
 		a
+			flex 0 0 180px
+			height 46px
 			display block
-			position absolute
-			top 27px
-			right 20px
+			white-space nowrap
 			background $brand-primary
 			color $white
 			padding 12px 15px
 			font-size 17px
+			text-align center
 			&:hover
 				text-decoration none
