--- a/src/styles/custom/elements/production.styl
+++ b/src/styles/custom/elements/production.styl
@@ -2,13 +2,17 @@
 	&__all-goods
 		display block
 		position absolute
-		right 0
+		right 15px
 		top 45px
-		font-size 20px
+		font-size 16px
 		text-decoration none
 		border-bottom 1px dashed $brand-primary
 		&:hover
 			text-decoration none
+		@media screen and (min-width: $screen-sm)
+			font-size 18px
+		@media screen and (min-width: $screen-md)
+			font-size 20px
 	&__catalog
 		height 240px
 		background $brand-primary
