--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -1,7 +1,8 @@
 extends base/base
 
 block content
-	.container.slider
+	.container
+		.slider
 			.slider__item
 				img(src="http://dummyimage.com/1140x335/00ff00/fff")
 				a(href="")
@@ -77,7 +78,7 @@ block content
 			.col-cs-12.text-center
 				h2.title.title__h2.title__h2--center Наши клиенты
 			mixin client()
-				.col-xs-12.col-sm-4.col-md-3.col-lg-2
+				.col-xs-6.col-sm-4.col-md-4.col-lg-2
 					a(href="").clients__item
 						img(src="images/client__logo.png")
 			+client()
@@ -87,25 +88,26 @@ block content
 			+client()
 			+client()
 
-	.container
-		.row
-			.col-xs-12.col-md-6.col-md-push-6.block-news
-				h2.title.title__h2 Новости
-				a(href="").block-news__all-news Все новости
-				mixin news()
-					.block-news__item.clearfix
-						img(src="http://dummyimage.com/68x68/444444/ffffff")
-						.data
-							i.fa.fa-clock-o
-							| 27.09.2015
-						a(href="").text
-							+lipsum (10, "words")
+	.wrapper.wrapper--gray
+		.container
+			.row
+				.col-xs-12.col-md-6.col-md-push-6.block-news
+					h2.title.title__h2 Новости
+					a(href="").block-news__all-news Все новости
+					mixin news()
+						.block-news__item.clearfix
+							img(src="http://dummyimage.com/68x68/444444/ffffff")
+							.data
+								i.fa.fa-clock-o
+								| 27.09.2015
+							a(href="").text
+								+lipsum (10, "words")
 
 
-				+news()
-				+news()
-				+news()
-			.col-xs-12.col-md-5.col-md-pull-6.block-about
-				h2.title.title__h2 О компании
-				p Компания ООО «Комплекс технологий» была основана в 2010 году. Основным направлением деятельности компании является поставка импортной дорожно-строительной и строительной техники, запасных частей и расходных материалов из Китая, Испании, Швеции.
-				p Вся дорожно-строительная техника, поставляемая нами, отличается высоким качеством, надежностью и пользуется особой популярностью. 
+					+news()
+					+news()
+					+news()
+				.col-xs-12.col-md-5.col-md-pull-6.block-about
+					h2.title.title__h2 О нашей компании
+					p Компания ООО «Комплекс технологий» была основана в 2010 году. Основным направлением деятельности компании является поставка импортной дорожно-строительной и строительной техники, запасных частей и расходных материалов из Китая, Испании, Швеции.
+					p Вся дорожно-строительная техника, поставляемая нами, отличается высоким качеством, надежностью и пользуется особой популярностью. 
