Catalog, product page

--- a/src/styles/custom/elements/common.styl
+++ b/src/styles/custom/elements/common.styl
@@ -5,6 +5,24 @@ ul
 	margin 0
 	padding 0
 
+// Sticky flex footer
+html
+body
+	display flex
+	flex-direction column
+	min-height 100%
+
+body
+	flex 1 1 auto
+	position relative
+
+header
+.navigation
+footer
+	flex 0 0 auto
+.content
+	flex 1 0 auto
+
 // Header
 @media screen and (max-width: $screen-sm-max)
 	header
