--- a/src/styles/custom/main.styl
+++ b/src/styles/custom/main.styl
@@ -7,6 +7,7 @@
 @import "elements/checkout-link"
 @import "elements/navigation"
 @import "elements/search"
+@import "elements/breadcrumbs"
 @import "elements/footer"
 
 @import "elements/slider"
@@ -15,3 +16,6 @@
 @import "elements/clients"
 @import "elements/block-about"
 @import "elements/block-news"
+
+@import "elements/product"
+@import "elements/catalog"
