--- a/src/styles/custom/elements/typo.styl
+++ b/src/styles/custom/elements/typo.styl
@@ -24,3 +24,10 @@
 		&--center
 			display inline-block
 			text-align center
+		&--inner
+			margin-top 15px
+			margin-bottom 15px
+			@media screen and (min-width: $screen-sm)
+				margin-bottom 15px
+			@media screen and (min-width: $screen-md)
+				margin-bottom 15px
