--- a/src/templates/catalog.jade
+++ b/src/templates/catalog.jade
@@ -45,3 +45,10 @@ block content
 			+catalog_item()
 			+catalog_item()
 			+catalog_item()
+	.wrapper.wrapper--gray
+		.container
+			.row
+				.col-xs-12
+					.catalog-description
+						p Компания ООО «Комплекс технологий» была основана в 2010 году. Основным направлением деятельности компании является поставка импортной дорожно-строительной и строительной техники, запасных частей и расходных материалов из Китая, Испании, Швеции.
+						p Вся дорожно-строительная техника, поставляемая нами, отличается высоким качеством, надежностью и пользуется особой популяой популярностью.
