--- a/src/templates/elements/scripts.jade
+++ b/src/templates/elements/scripts.jade
@@ -1,3 +1,4 @@
 script(src='http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js ')
 script(src='js/libs/tab.js')
+script(src='js/libs/jquery-ui.min.js')
 script(src='js/main.js')
