--- a/src/templates/product.jade
+++ b/src/templates/product.jade
@@ -12,13 +12,20 @@ block bccontent
 block content
 	.container.product
 		.row
-			.col-xs-12
-				h2.title.title__h2.title__h2--inner
-					+lipsum(8,"words")
-				.product__presence.product__presence--aviable Товар в наличии
-		.row
 			.col-xs-12.col-md-7
-				h3 image
+				h2.title.title__h2.title__h2--inner.title__h2--cropped
+					+lipsum(15,"words")
+				.product__presence.product__presence--aviable Товар в наличии
+				.product__image
+					.big
+						img(src="http://dummyimage.com/570x460/0f0/fff")
+					.small
+						a(href="" data-url="http://dummyimage.com/570x460/0f0/fff")
+							img(src="http://dummyimage.com/180x120/0f0/fff")
+						a(href="" data-url="http://dummyimage.com/570x460/f00/fff")
+							img(src="http://dummyimage.com/180x120/f00/fff")
+						a(href="" data-url="http://dummyimage.com/570x460/00f/fff")
+							img(src="http://dummyimage.com/180x120/00f/fff")
 				ul.nav.nav-tabs.product__tabs
 					li(role="presentation").active
 						a(href="#description" aria-controls="description" role="tab" data-toggle="tab") Характеристики
