--- a/src/styles/custom/elements/catalog.styl
+++ b/src/styles/custom/elements/catalog.styl
@@ -101,3 +101,8 @@
 			right 7px
 			bottom 7px
 			border-color transparent $white $white transparent
+
+.catalog-description
+	color #1d212b
+	font-size 18px
+	padding 15px 0 60px
